# TREKKING-2024-2025

./: .gitignore  CMakeLists.txt  Distancia_Posicionamento.py  IdentificarCone.py  MPU6050_FUNCIONAL.cpp  README.md  RetornoDeDistancia.py  TesteMT.py  Treinamento.py  config.yaml  convert_onnx.py  platformio.ini  sdkconfig  sdkconfig.old  teste.py  testeonnx.py
Arduino/: platformio.ini
Arduino/src/: main.cpp
ESP/components/motor/: CMakeLists.txt  motor.cpp
ESP/main/: CMakeLists.txt  main.cpp
ROS_WS/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
ROS_WS/log/: latest_build
TesteDosMotores/: platformio.ini
TesteDosMotores/src/: main.cpp
V1_ncnn_model/: metadata.yaml  model_ncnn.py
V6_128_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
VISAOFUNCIONANDO/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  visao  visao.cpp
Visao/devel/: .catkin  setup.sh
Visao/src/teste1/: CMakeLists.txt  package.xml
Visao/src/visao/: CMakeCache.txt  CMakeLists.txt  package.xml
components/MotorDC/: CMakeLists.txt  MotorDC.cpp
components/MotorDC/include/: MotorDC.h
components/PinConfig/: CMakeLists.txt  PinConfig.cpp
components/PinConfig/include/: PinConfig.h
components/Ps4Controller/: CMakeLists.txt  component.mk
components/Ps4Controller/src/: ps4.c  ps4_parser.c  ps4_spp.c
components/RobotProperties/: CMakeLists.txt  RobotProperties.cpp
components/RobotProperties/include/: RobotProperties.h
components/RobotPs4Controller/: CMakeLists.txt  RobotPs4Controller.cpp
components/RobotPs4Controller/include/: RobotPs4Controller.h
components/pink0d__btd_vhci/: .component_hash
components/pink0d__btd_vhci/src/: PS4BT.h  PS4Parser.h  hidboot.cpp
data/labels/: train.cache
include/: Giroscopio.h  MPU9250.h  MotorDC.h  Pinos.h  Robo.h  Tempo.h  Volante.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
movimento_robo/include/: Pinos.h  Tempo.h  Volante.h
movimento_robo/src/: Giroscopio.cpp  MotorDC.cpp  Robo.cpp  main.cpp
src/: Giroscopio.cpp  MotorDC.cpp  Robo.cpp  Tempo.cpp  Volante.cpp  main.cpp  pidIMU.cpp  testeDosMotores.cpp
(+452 files in other folders)
